--- a/get-started/start-here.mdx
+++ b/get-started/start-here.mdx
@@ -1,10 +1,38 @@
 ---
-title: "Working with GrowthX"
+title: "Start Here"
 icon: "hand-wave"
 ---
 
-<img
-  className="hidden dark:block"
-  src="/images/get-started.png"
-  alt="Hero Get Started"
-/>
+## Presentation
+
+<iframe width="100%" height="500" src="https://docs.google.com/presentation/d/1vPPFdPwMv533caFrFY2egCGMfbskYa_cffiPGEgIWDc/embed"></iframe>
+
+**Download the slides here (PDF)**
+
+[📄 **AI-Led Growth - June 2024.pdf (27975.0KB)**](link-https://file.notion.so/f/f/27a79bd8-2139-406a-abfc-0b486eaad31d/b4178b00-5600-40b1-91ec-e836ed82ee27/AI-Led_Growth_-_June_2024.pdf?table=block&id=0754c9ce-6995-4b4d-be69-741ac5007ea5&spaceId=27a79bd8-2139-406a-abfc-0b486eaad31d&expirationTimestamp=1728144000000&signature=zkye70fN8Sq6bL0IznfQx4wGf84R3nRHnTTcsMLuz9M-pdf)
+
+## Our Approach
+
+This video demo walks through our approach and what we built for Deepgram.
+
+<iframe width="100%" height="500" src="https://www.youtube.com/embed/6mqEoW3PvP0?si=Pz10FmAWBR2eMpWC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+---
+
+<iframe width="100%" height="500" src="https://www.loom.com/embed/fdd3427009de44f8a0fe2eb5b48d3ad8?sid=2af778e7-666a-4fa1-a0da-77d81bb93437" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+---
+
+## Pages
+
+<a href="/working-with/is-for-me">🤔 Is GrowthX for me?</a>  
+<a href="/working-with/pricing">💸 Pricing</a>  
+<a href="/work-with-us/faqs">📚 Frequently Asked Questions</a>  
+<a href="/work-with-us/kickoff-template">📝 Project Kickoff Template</a>  
+<a href="/work-with-us/client-checklist">☑️ Client Checklist</a>  
+
+## Free AI Tools
+
+<a href="/free-tools/keyword">🤴 Keyword → User Intent + Article Outline</a>  
+<a href="/free-tools/seo-analyzer">✨ SEO Analyzer</a>  
+<a href="/free-tools/ai-character-rewriter">🎥 AI TV/Movie Character Rewriter</a>
